<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="icw.htw.de.pulsetracker.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSetHighPulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_high_pulse"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewSetHighPulseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarSetHighPulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="200" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSetLowPulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_low_pulse"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewSetLowPulseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarSetLowPulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="200" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSetWaitingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_waiting_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewSetWaitingTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="100"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarSetWaitingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSetPulseVariationTresholdPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_increase_decrease_percentage"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewSetPulseVariationTresholdPercentageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="100"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarSetPulseVariationTresholdPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSetPulseVariationTresholdWaitingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_waiting_time_pulse"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewSetPulseVariationTresholdWaitingTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="100"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarSetPulseVariationTresholdWaitingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>
</RelativeLayout>
